Spacing fix

--- a/src/css/_specific.less
+++ b/src/css/_specific.less
@@ -1,7 +1,6 @@
 .intro {
   animation: unset;
   margin: @section-y-margin*2 auto;
-  margin-top: @section-y-margin*2-@box-space;
 
   @media @med-under-md { margin: @section-y-margin auto; margin-top: @box-space; }
 
